src/styles/piaf.scss
@import "bootswatch/dist/slate/_variables";

// Bootstrap customisation
$form-range-thumb-width:          2rem;
$form-range-thumb-height:         2rem;
$form-range-thumb-border-radius:  1rem;
$form-range-thumb-bg:             $gray-700;
$tooltip-color:                   $white;

@import "bootstrap/scss/bootstrap";

// Piaf-specific styles

// base.templ header

.banner-path-item:not(:first-child)::before {
    display: inline-block;
    content: "/";
    margin-left: 8px;
    margin-right: 8px;
}

nav + div {
    display: inline-block;
    white-space: nowrap;
    margin-top: 64px;  // is also updated by JS
}

body:not(.footer-includes-slider) {
    #main-content {
        margin-bottom: 60px;
    }

    #index-position-slider {
        display: none;
    }
}

body.footer-includes-slider {
    #main-content {
        margin-bottom: 120px;
    }

    #index-position-slider {
        display: flex;
    }
}

div.navbar-nav {
    display: inline-block;
    white-space: nowrap;
    overflow: hidden;
    justify-content: center;
    text-align: center;
    text-overflow: ellipsis;
}

.piaf-nav-fixed-size {
    --bs-navbar-brand-margin-end: 0px;
    width: 4em;
    padding: 0px;
}

// base.templ footer

.footer {
    margin-top: 8px;
}

.footer-top-border {
    height: 4px;
}

.footer-padding-bottom {
    height: 8px;
}

.volume-container {
    width: 25%;
}

.big-volume-container {
    width: 50%;
}

#speed-menu-button {
    min-width: 6em;  // stop the button fluctuating in size
}

#index-position-slider {
    height: 64px;
    z-index: 1;
}

// Index pages

.piaf-media-table {
    .btn-link {
        --bs-btn-padding-y: 0px;
    }

    button.piaf-play-icon {
        --bs-btn-padding-x: 2px;
    }

    col:nth-child(1) {
        width: 24px;
    }
    col:nth-child(3) {
        width: 0;  // sets to 'as small as possible', not invisible
    }
}

/* controls page: 2x2 grid, plus a full-width slider */

/* control positions and sizes: */
:root {
    /* defaults */
    --piaf-big-control-size: 10vw;
    --piaf-ctrl-col-x: 20%;
    --piaf-ctrl-row-1-y: 10%;
    --piaf-ctrl-row-2-y: 40%;
    --piaf-ctrl-row-3-y: 70%;

    /* overrides */
    /* small devices, e.g. iPhone SE */
    @media (orientation: landscape) and (max-height: 500px) {
        --piaf-big-control-size: 6vh;
        --piaf-ctrl-row-1-y: 20%;
        --piaf-ctrl-row-2-y: 40%;
        --piaf-ctrl-row-3-y: 55%;
    }
    @media (orientation: portrait) and (max-width: 500px) {
        --piaf-big-control-size: 10vh;
        --piaf-ctrl-col-x: 10%;
        --piaf-ctrl-row-1-y: 15%;
        --piaf-ctrl-row-2-y: 45%;
    }
}

$show-control-boundaries: false;

.piaf-controls-row-1 {
    @if $show-control-boundaries {
        background-color: red;
        width: 100%;
        height: calc(var(--piaf-big-control-size) + 24px);
    }

    position: fixed;
    fill-opacity: 1;
    top: var(--piaf-ctrl-row-1-y);
}

.piaf-controls-row-2 {
    @if $show-control-boundaries {
        background-color: green;
        width: 100%;
        height: calc(var(--piaf-big-control-size) + 24px);
    }

    position: fixed;
    top: var(--piaf-ctrl-row-2-y);
}

.piaf-controls-row-3 {
    @if $show-control-boundaries {
        background-color: blue;
    }

    position: fixed;
    top: var(--piaf-ctrl-row-3-y);
    left: 10%;
    right: 10%;
    height: 64px;
}

.piaf-controls-col-1 {
    position: fixed;
    left: var(--piaf-ctrl-col-x);
}

.piaf-controls-col-2 {
    position: fixed;
    right: var(--piaf-ctrl-col-x);
}

.piaf-big-control-icon {
    font-size: var(--piaf-big-control-size);
}

